# parts_warehouse

./: .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-jenkins  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py
app/core/: app.py  database.py  exceptions.py
app/core/models/: __init__.py  category.py  part.py
app/core/routes/: category_routes.py  part_routes.py  search_routes.py
src/: main.py
src/core/: app.py  config.py  database.py  exceptions.py
src/core/auth/: jwt_handler.py
src/core/models/: __init__.py  category.py
src/core/models/auth/: user.py
src/core/routes/: auth_routes.py  category_routes.py  part_routes.py  search_routes.py
tests/: conftest.py  validation_tests.py
tests/auth/: auth_tests.py
tests/crud/: category_tests.py  parts_tests.py
