[tool.poetry]
name = "parts-warehouse"
version = "0.1.0"
description = ""
authors = ["fjed <d.ostapczuk1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beanie = "1.25.0"
fastapi = "0.110.0"
python-dotenv = "1.0.1"
uvicorn = "0.27.0"
python-jose = "3.3.0"
passlib = "1.7.4"
pydantic-settings = "2.2.1"
email-validator = "2.1.1"
python-multipart = "0.0.9"

[tool.poetry.group.test.dependencies]
pytest = "8.0.2"
httpx = "0.27.0"
asgi-lifespan = "2.1.0"
mongomock-motor = "0.0.28"
pytest-mock = "3.12.0"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_tests.py", "*_test.py"]
pythonpath = [".", "src"]
